--- a/terst/index3.html
+++ b/terst/index3.html
@@ -18,8 +18,8 @@
       <button type="submit">Start Test</button>
     </form>
 
-    <video id="video" autoplay></video
-    ><canvas id="canvas" width="320" height="240"></canvas>
+    <video id="video" autoplay></video>
+    <canvas id="canvas" width="320" height="240"></canvas>
     <script src="options.js"></script>
 
     <!-- <script type="text/javascript">
