--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
 
     <script src="options.js"></script>
     <video id="webcam-feed"></video>
-    <canvas id="canvas" width="320" height="240"></canvas>
+    <canvas id="canvas" style="display: none" width="320" height="240"></canvas>
     <script src="popup.js"></script>
   </body>
 </html>
